# Snapla

./: Cargo.toml  index.html  snapla-502f7b3e3dc0603c.js  snapla-502f7b3e3dc0603c_bg.wasm
.github/workflows/: rust.yml
info_parser_from_docx/: Cargo.toml
info_parser_from_docx/information/: Calcium.docx  Chlorid.docx  Eisen.docx  Fluorid.docx  Jod.docx  Kalium.docx  Kupfer.docx  Magnesium.docx  Mangan.docx  Natrium.docx  Phosphor.docx  Salz.docx  Vitamin A.docx  Vitamin B1.docx  Vitamin B2.docx  Vitamin B3.docx  Vitamin B5.docx  Vitamin B6.docx  Vitamin C.docx  Vitamin E.docx  Vitamin K.docx  Vitmin B12.docx  Vitmin B7.docx  Vitmin B9.docx  Zink.docx
info_parser_from_docx/serialized/: daten.json
info_parser_from_docx/src/: main.rs  parse.rs
src/: app.rs  lib.rs  main.rs  snapla.rs
