[package]
name = "info_parser_from_docx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx-rust = "0.1.8"
fxhash = "0.2.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
